# tinylog

./: CMakeLists.txt  adapter.c  adapter.h  catagory.c  catagory.h  config.c  config.h  dict.c  dict.h  helper.c  helper.h  layout.c  layout.h  logadapter.c  logadapter.h  logdef.h  logger.c  logger.cfg  logger.h  loghelper.c  loghelper.h  loglayout.c  loglayout.h  logmsg.c  logmsg.h  logstr.c  logstr.h  makefile  snprintf.c  snprintf.h  testmain.c  tick.c  tick.h  tinylog.c  tinylog.h  todo.txt
